<resources>
    <string name="app_name">Budget</string>
    <string name="name_hint">Name</string>
    <string name="spent_on_what_hint">Spent On?</string>
    <string name="dollars_spent_hint">$</string>
    <string name="add_button_text">ADD</string>
    <string name="see_overview_text">Overview</string>
    <string name="edit">Edit</string>
    <string name="default_name">[Name]</string>
    <string name="default_dollars">\?</string>
    <string name="default_spent_on">On What?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string-array name="names_array">
        <item>Dan</item>
        <item>Erin</item>
    </string-array>

    <string-array name="times_array">
        <item>Day</item>
        <item>Week</item>
        <item>All</item>
        <item>Categories</item>
    </string-array>
</resources>
