<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/default_name"/>

    <TextView
        android:id="@+id/spent_on_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/default_spent_on"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dollars_text_view"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/default_dollars"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/create_edit_dialog_button"
        android:contentDescription="@string/edit"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="8dp"
        android:onClick="editBudgetItem"
        android:src="@drawable/edit_icon"
        />

</LinearLayout>