<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.budget.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/person_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/name_hint"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/spent_money_where_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/spent_on_what_hint"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/dollars_spent_edit_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dollars_spent_hint"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    </LinearLayout>


    <Button
        android:id="@+id/add_to_budget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background= "@color/colorPrimary"
        android:onClick="addToBudgetList"
        android:text="@string/add_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_budgets_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
